fix lỗi overflow header ở PC và tablet, đưa thuộc tính overflow:hidden vào mobile để loại bỏ bugs ở PC và tablet, bug còn lại sẽ sửa tiếp ở mobile

--- a/w3_band/assets/css/responsive.css
+++ b/w3_band/assets/css/responsive.css
@@ -21,6 +21,11 @@
     #nav > li:first-child {
         display: inline-block;
     }
+
+    #header {
+        overflow: hidden;
+    }
+
     #header .search-btn {
         display: none;
     }
