--- a/w3_band/assets/css/style.css
+++ b/w3_band/assets/css/style.css
@@ -105,7 +105,6 @@ html {
     left: 0;
     right: 0;
     z-index: 1;
-    overflow: hidden;
 }
 
 #nav {
